<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".controller.CardValidationActivity"
    tools:showIn="@layout/activity_validation">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_number_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_detail_vertical_margin"
        android:hint="@string/card_number_hint"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/colorTextHelper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_number_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="16" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_expiry_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_input_vertical_margin"
        android:hint="@string/card_expiry_hint"
        app:helperTextEnabled="true"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_today_black_24dp"
        app:endIconContentDescription="@string/expiry_icon_description"
        app:helperTextTextColor="@color/colorTextHelper"
        app:layout_constraintEnd_toStartOf="@+id/card_cvc_input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_number_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_expiry_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_cvc_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_cvc_hint"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/colorTextHelper"
        android:layout_marginStart="@dimen/detail_space_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_expiry_input"
        app:layout_constraintTop_toTopOf="@+id/card_expiry_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_cvc_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/card_types_vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_expiry_input">

        <TextView
            android:id="@+id/card_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_types_vertical_margin"
            android:text="@string/card_type_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/card_type_title_text_size" />

        <RadioButton
            android:id="@+id/radio_visa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/radio_buttons_vertical_margin"
            android:onClick="onCardTypeRadioButtonClicked"
            android:text="@string/radio_visa_label"
            android:textSize="@dimen/card_type_text_size"
            tools:checked="true" />

        <RadioButton
            android:id="@+id/radio_master_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/radio_buttons_vertical_margin"
            android:onClick="onCardTypeRadioButtonClicked"
            android:text="@string/radio_mastercard_label"
            android:textSize="@dimen/card_type_text_size" />

        <RadioButton
            android:id="@+id/radio_american"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCardTypeRadioButtonClicked"
            android:text="@string/radio_american_express_label"
            android:textSize="@dimen/card_type_text_size" />
    </RadioGroup>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_title"
        android:textStyle="bold"
        android:onClick="onSubmitClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>